Settings: External Smart Pixels fragment launch
Necessary for Smart Pixels tile.
Based on change by Mazda--.

Reference commit:
DirtyUnicorns@c637500b89bfe1b726a92efa358cf48b1a2a3093

Change-Id: I6d088d2e4531620f4e95d7402f2ec36e4f1891d0

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3371,6 +3371,17 @@
                        android:resource="@string/build_tweaks_summary_title"/>
         </activity>
 
+        <!-- Smart Pixels -->
+        <activity android:name="Settings$SmartPixelsActivity"
+                android:label="@string/smart_pixels_title">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.dot.dotextras.fragments.SmartPixels" />
+        </activity>
+
         <!-- This is the longest AndroidManifest.xml ever. -->
     </application>
 </manifest>
