--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -101,6 +101,9 @@
     <uses-permission android:name="android.permission.USE_RESERVED_DISK" />
     <uses-permission android:name="android.permission.MANAGE_SCOPED_ACCESS_DIRECTORY_PERMISSIONS" />
 
+     <!-- Thermal controller -->
+    <uses-permission android:name="org.pixelexperience.thermalcontroller.MANAGE_SETTINGS" />
+
     <application android:label="@string/settings_label"
             android:icon="@mipmap/ic_launcher"
             android:taskAffinity=""
